# KitHeis

./: Makefile  Makefile.am  Makefile.in  README  config.status  input.in  kh
autom4te.cache/: output.0  requests
head/: head_&_structures.h
kh_simulation/: analysis.tar.xz  input.in  kh
kh_simulation/analysis/: error_analysis.py
lib/: initialize.c  measures.c
lib/.deps/: initialize.Po  spin_manip.Po
simulation_setup/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  input.in
simulation_setup/autom4te.cache/: requests  traces.0  traces.1
simulation_setup/head/: head_&_structures.h
simulation_setup/lib/: in_out.c  measures.c  spin_manip.c  updates.c  utility.c
simulation_setup/lib/.deps/: initialize.Po  spin_manip.Po
simulation_setup/src/: main.c
src/: main.c
